# rust-webapi-template

./: .env.sample  .gitconfig.sample  .gitignore  Cargo.toml  README.md  diesel.toml  readme.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: release.yml
Docs/: DesignDoc.md
docs/: MIGRATION.md
migrations/2024-11-23-043245_create_users/: down.sql  up.sql
src/: main.rs  schema.rs
src/application/: convert_service.rs  mod.rs  rgb_service.rs  token_service.rs  user_service.rs  v4prefix_service.rs
src/application/auth/: auth_service.rs  middleware.rs  mod.rs
src/application/usecase/: token_service.rs  user_service.rs
src/auth/: auth_service.rs  jwt.rs  middleware.rs  mod.rs
src/controllers/: bar.rs  convert.rs  dice.rs  get_metrics.rs  make_rgb.rs  make_sleep.rs  metrics.rs  mod.rs  post_bar.rs  root.rs  sleepy.rs
src/domain/: user.rs
src/infrastructure/: db.rs
src/models/: metrics.rs
src/presentation/: auth_handler.rs  convert_handler.rs  dice_handler.rs  healthcheck_handler.rs  metrics_handler.rs  mod.rs  sleep_handler.rs  user_handler.rs
src/presentation/handlers/: auth_handler.rs  mod.rs  user_handler.rs
src/utils/: utility.rs  utils.rs
