[package]
name = "rust-webapi-template"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "1", features = ["full"] }
tower = "0.4"
rand = "0.8"
sysinfo = "0.29"
clippy = "0.0.302"
uuid = { version = "1", features = ["serde", "v4"] }
dotenv = "0.15"
jsonwebtoken = "9.0"
axum-extra = "0.4"
chrono = "0"
headers = "0.3"
bcrypt = "0.12"
