[package]
name = "rust-webapi-template"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.9"
axum-extra = "0.9.6"
tokio = { version = "1.41.1", features = ["full"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "1.0.133", features = ["full"] }
tower = "0.5.1"
rand = "0.8.5"
sysinfo = "0.32.0"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
dotenvx = "0.*"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
headers = "0.4.0"
bcrypt = "0.16.0"

[build-dependencies]
clippy = { version = "0.0.302", optional = true }
