[package]
name = "rust-webapi-template"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.9"
axum-extra = "0.9.6"
clap = "4.5.23"
tokio = { version = "1.42.0", features = ["full"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "1.0.133", features = ["full"] }
tower = "0.5.2"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
dotenvx = "0.0.2"
jsonwebtoken = "9.3.0"
chrono = "0.4.39"
headers = "0.4.0"
bcrypt = "0.16.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.94"

[build-dependencies]
clippy = { version = "0.0.302", optional = true }
